--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -47,7 +47,7 @@
   "Let's create your profile": "プロフィールを作成しましょう。",
   "Welcome to Imogen": "Imogenへようこそ",
   "Choose your plan": "プランを選択してください",
-  "Pro plan gives unlimited access to over 20 AI models.": "プロプランでは20以上のAIモデルに無制限にアクセスできます。",
+  "Use all the AI models and features!": "すべてのAIモデルと機能を使用しましょう！",
   "You are all set up!": "セットアップが完了しました！",
   "Setup Complete": "セットアップ完了",
   "Job Role": "職種",
@@ -147,7 +147,7 @@
   "AI model Arena": "AI モデルアリーナ",
   "Translation, email replies, reports, grammar checks": "翻訳、メール返信、レポート、文法チェック",
   "AI web search": "AI ウェブ検索",
-  "Unlimited AI summaries": "無制限のAI要約",
+  "AI summaries": "AI 要約",
   "Scan webpages, YouTube videos, or files": "ウェブページ、YouTube動画、ファイルのスキャンと要約",
   "File summaries, smart Q&A, file translation, multi-language translation, extended PDF reading, batch translation, etc.": "ファイル要約、スマートQ&A、ファイル翻訳、多言語翻訳、拡張PDFリーディング、一括翻訳など",
   "Chrome / Edge / Safari, iOS, Mac, Android and Windows": "Chrome / Edge / Safari、iOS、Mac、Android、Windows",
@@ -172,9 +172,9 @@
   "Imogen API Keys Hub": "Imogen API Keys ハブ",
   "How to use API keys?": "API Keysの使い方",
   "Paid Imogen accounts:": "有料Imogenアカウント：",
-  "By default, Imogen provides usage limits based on your subscription plan. Imogen ensure a seamless experience for you.": "デフォルトでは、Imogenはサブスクリプションプランに基づいて使用制限を提供します。API Keysを使用しなくても、Imogenはシームレスな体験を保証し、サブスクリプション後にすべての機能が解除されます。",
+  "By default, Imogen provides usage limits based on your subscription plan. Imogen ensure a seamless experience for you.": "デフォルトでは、Imogenはサブスクリプションプランに基づいて使用制限を設けています。API Keysを使用しなくても、シームレスな体験を提供し、サブスクリプション後にすべての機能のロックが解除されます。",
   "Use your own API keys:": "独自のAPI Keysを使用：",
-  "If you provide your own API keys here, Imogen will use them instead. This option lifts the plan-based limitations but requires you to manage your own API usage and billing with the respective providers.": "ここで独自のAPI Keysを提供すると、Imogenはそれらを使用します。このオプションはプランベースの制限を解除しますが、各プロバイダーとのAPI使用量と請求を自己管理する必要があります。",
+  "If you provide your own API keys here, Imogen will use them instead. This option lifts the plan-based limitations but requires you to manage your own API usage and billing with the respective providers.": "ここで独自のAPI Keysを提供すると、Imogenはそれらを使用します。このオプションではプランベースの制限が解除されますが、各プロバイダーとのAPI使用量と請求を自己管理する必要があります。追加後、モデルは右上のメニューに表示されます（制限地域でも安全に使用可能）。",
   "Choose the option that best suits your needs and usage patterns. Click on the link below for more details.": "ニーズと使用パターンに最適なオプションを選択してください。詳細は以下のリンクをクリックしてください。",
   "Subscribe to unlock all API keys storage.": "すべてのAPI Keys保存機能のロックを解除するにはサブスクリプションが必要です。",
   "Upgrade to use all AI models": "すべてのAIモデルを使用するにはアップグレードしてください",
