--- a/public/locales/kr/translation.json
+++ b/public/locales/kr/translation.json
@@ -48,7 +48,7 @@
   "Let's create your profile": "프로필을 만들어 봅시다.",
   "Welcome to Imogen": "Imogen에 오신 것을 환영합니다",
   "Choose your plan": "플랜을 선택하세요",
-  "Pro plan gives unlimited access to over 20 AI models.": "프로 플랜은 20개 이상의 AI 모델에 무제한 접근을 제공합니다.",
+  "Use all the AI models and features!": "모든 AI 모델과 기능을 사용하세요!",
   "You are all set up!": "모든 설정이 완료되었습니다!",
   "Setup Complete": "설정 완료",
   "Job Role": "직책",
@@ -148,7 +148,7 @@
   "AI model Arena": "AI 모델 아레나",
   "Translation, email replies, reports, grammar checks": "번역, 이메일 답장, 보고서, 문법 검사",
   "AI web search": "AI 웹 검색",
-  "Unlimited AI summaries": "무제한 AI 요약",
+  "AI summaries": "AI 요약",
   "Scan webpages, YouTube videos, or files": "웹페이지, YouTube 동영상 또는 파일 스캔",
   "File summaries, smart Q&A, file translation, multi-language translation, extended PDF reading, batch translation, etc.": "파일 요약, 스마트 Q&A, 파일 번역, 다국어 번역, 확장 PDF 읽기, 일괄 번역 등",
   "Chrome / Edge / Safari, iOS, Mac, Android and Windows": "Chrome / Edge / Safari, iOS, Mac, Android 및 Windows",
@@ -174,9 +174,9 @@
   "Imogen API Keys Hub": "Imogen API 키 허브",
   "How to use API keys?": "API 키 사용 방법",
   "Paid Imogen accounts:": "유료 Imogen 계정:",
-  "By default, Imogen provides usage limits based on your subscription plan. Imogen ensure a seamless experience for you.": "기본적으로 Imogen은 구독 플랜에 따라 사용 제한을 제공합니다. API 키를 사용하지 않아도 Imogen이 원활한 경험을 보장하며, 구독 시 모든 기능이 해제됩니다.",
+  "By default, Imogen provides usage limits based on your subscription plan. Imogen ensure a seamless experience for you.": "기본적으로 Imogen은 구독 플랜에 따라 사용 제한을 제공합니다. API 키를 사용하지 않아도 원활한 경험을 보장하며, 구독 시 모든 기능이 해제됩니다.",
   "Use your own API keys:": "자체 API 키 사용:",
-  "If you provide your own API keys here, Imogen will use them instead. This option lifts the plan-based limitations but requires you to manage your own API usage and billing with the respective providers.": "여기에 자체 API 키를 제공하면 Imogen이 이를 대신 사용합니다. 이 옵션은 플랜 기반 제한을 해제하지만 해당 제공업체와의 API 사용량과 요금을 직접 관리해야 합니다.",
+  "If you provide your own API keys here, Imogen will use them instead. This option lifts the plan-based limitations but requires you to manage your own API usage and billing with the respective providers.": "여기에 자체 API 키를 제공하면 Imogen이 이를 대신 사용합니다. 이 옵션은 플랜 기반 제한을 해제하지만 해당 제공업체와의 API 사용량과 요금을 직접 관리해야 합니다. 추가 후 모델이 우측 상단 메뉴에 표시됩니다. (제한된 지역에서도 안전하게 사용 가능)",
   "Choose the option that best suits your needs and usage patterns. Click on the link below for more details.": "필요와 사용 패턴에 가장 적합한 옵션을 선택하세요. 자세한 내용은 아래 링크를 클릭하세요.",
   "Subscribe to unlock all API keys storage.": "모든 API 키 저장소를 해제하려면 구독하세요.",
   "Upgrade to use all AI models": "모든 AI 모델을 사용하려면 업그레이드하세요",
