--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -45,7 +45,7 @@
   "Let's create your profile.": "讓我們來建立你的個人資料。",
   "Welcome to Imogen": "歡迎來到 Imogen",
   "Choose your plan": "選擇你的計劃",
-  "Pro plan gives unlimited access to over 20 AI models.": "專業計劃提供無限訪問超過 20 個 AI 模型。",
+  "Use all the AI models and features!": "解鎖所有 AI 模型和功能！",
   "You are all set up!": "你已經設置好了！",
   "Setup Complete": "設置完成",
   "Job Role": "職位",
@@ -145,18 +145,18 @@
   "Lite Plan": "Lite Plan",
   "Pro Plan": "Pro Plan",
   "Standard models: 5000 requests": "Standard模型: 5000次存取",
-  "GPT-4o mini, Claude 3 Haiku and more": "GPT-4o mini, Claude 3 Haiku and more",
+  "GPT-4o mini, Claude 3 Haiku 還有更多": "GPT-4o mini, Claude 3 Haiku 還有更多",
   "Pro models: 200 requests": "Pro模型: 200次存取",
   "Limited time offer: Access to OpenAI: O1mini, GPT 4o ,X-AI Grok2": "限時優惠: 使用OpenAI: O1mini, GPT 4o ,X-AI Grok2",
   "Powered by Stable Diffusion": "Powered by Stable Diffusion",
-  "Connect to OpenAI, Anthropic, Google Gemini, and more": "Connect to OpenAI, Anthropic, Google Gemini, and more",
+  "Connect to OpenAI, Anthropic, Google Gemini, and more": "Connect to OpenAI, Anthropic, Google Gemini 還有更多",
   "Artifact side by side code editor": "Artifact side by side code editor",
   "Share generated app online": "分享AI生成應用程式",
   "AI-powered customizable assistant": "自訂助手",
   "AI model Arena": "大型語言模型競技場",
   "Translation, email replies, reports, grammar checks": "翻譯, 電郵回覆, 報告, 文法檢查",
   "AI web search": "AI網絡搜索",
-  "Unlimited AI summaries": "無限AI摘要",
+  "AI summaries": "AI摘要",
   "Scan webpages, YouTube videos, or files": "掃描網頁, YouTube, 或文件總結",
   "File summaries, smart Q&A, file translation, multi-language translation, extended PDF reading, batch translation, etc.": "文件總結, 智能Q&A, 文件翻譯, 多語言翻譯, 擴展PDF閱讀, 批量翻譯, 等等",
   "Chrome / Edge / Safari, iOS, Mac, Android and Windows": "Chrome / Edge / Safari, iOS, Mac, Android and Windows",
@@ -181,9 +181,9 @@
   "Imogen API Keys Hub": "Imogen API Keys Hub",
   "How to use API keys?": "如何使用 API Keys?",
   "Paid Imogen accounts:": "付費 Imogen 帳戶：",
-  "By default, Imogen provides usage limits based on your subscription plan. Imogen ensure a seamless experience for you.": "默認情況下，Imogen 根據您的訂閱計劃提供服務。Imogen確保為您提供無縫的體驗就算你沒有使用API Keys，訂閱後會解鎖全部欄位。",
+  "By default, Imogen provides usage limits based on your subscription plan. Imogen ensure a seamless experience for you.": "默認情況下，Imogen 根據您的訂閱計劃提供服務。為您提供無縫的體驗就算你沒有使用API Keys也可以使用，訂閱後會解鎖全部欄位。",
   "Use your own API keys:": "使用您自己的 API Keys：",
-  "If you provide your own API keys here, Imogen will use them instead. This option lifts the plan-based limitations but requires you to manage your own API usage and billing with the respective providers.": "如果您在此提供自己的 API Keys，你可以在本平台使用它們。此選項解除了基於計劃的限制，但需要您自行管理與相應提供商的 API 使用和計費。(受限地區也可安全使用)",
+  "If you provide your own API keys here, Imogen will use them instead. This option lifts the plan-based limitations but requires you to manage your own API usage and billing with the respective providers.": "如果您在此提供自己的 API Keys，你可以在本平台使用它們。此選項解除了基於計劃的限制，但需要您自行管理與相應提供商的 API 使用和計費，新增後模型會顯示在右上角選單中。(受限地區也可安全使用)",
   "Choose the option that best suits your needs and usage patterns. Click on the link below for more details.": "選擇最適合您需求和使用模式的選項。點擊下面的連結了解更多詳情。",
   "Subscribe to unlock all API keys storage.": "訂閱以解鎖其他 API Keys 寄存功能。",
   "Upgrade to use all AI models": "升級以使用所有 AI 模型",
