Refactor model identifiers and update subscription validation logic
- Replaced instances of "o1-preview" with "o1" across multiple files to standardize model naming.
- Enhanced validation logic in `validateModel` and `validatePlanForModel` functions to enforce subscription requirements for using ultimate models.
- Updated user-facing messages and translations to reflect the new model name.
- Adjusted model visibility settings and limits to align with the new naming convention.

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -180,7 +180,7 @@
   "Upgrade to use all AI models": "すべてのAIモデルを使用するにはアップグレードしてください",
   "Current Subscription Plan": "現在のサブスクリプションプラン",
   "Upgrade to paid plan to unlock all models, plugins and image generation.": "すべてのモデル、プラグイン、画像生成機能のロックを解除するには有料プランにアップグレードしてください。",
-  "Upgrade to Ultimate to get access to OpenAI o1-preview and Claude 3 Opus": "OpenAI o1-previewとClaude 3 OpusにアクセスするにはUltimateにアップグレードしてください",
+  "Upgrade to Ultimate to get access to OpenAI o1 and Claude 3 Opus": "OpenAI o1とClaude 3 OpusにアクセスするにはUltimateにアップグレードしてください",
   "You're on the Ultimate plan! Enjoy your access to all models, plugins and image generation.": "Ultimateプランをご利用中です！すべてのモデル、プラグイン、画像生成機能をお楽しみください。",
   "Manage Subscription": "サブスクリプション管理",
   "Download Imogen 1.0 data as JSON. Import coming soon!": "Imogen 1.0のデータをJSONとしてダウンロード。インポート機能は近日公開予定！",
