--- a/public/locales/kr/translation.json
+++ b/public/locales/kr/translation.json
@@ -182,7 +182,7 @@
   "Upgrade to use all AI models": "모든 AI 모델을 사용하려면 업그레이드하세요",
   "Current Subscription Plan": "현재 구독 플랜",
   "Upgrade to paid plan to unlock all models, plugins and image generation.": "모든 모델, 플러그인 및 이미지 생성을 해제하려면 유료 플랜으로 업그레이드하세요.",
-  "Upgrade to Ultimate to get access to OpenAI o1-preview and Claude 3 Opus": "OpenAI o1-preview와 Claude 3 Opus에 접근하려면 Ultimate로 업그레이드하세요",
+  "Upgrade to Ultimate to get access to OpenAI o1 and Claude 3 Opus": "OpenAI o1와 Claude 3 Opus에 접근하려면 Ultimate로 업그레이드하세요",
   "You're on the Ultimate plan! Enjoy your access to all models, plugins and image generation.": "Ultimate 플랜을 사용 중입니다! 모든 모델, 플러그인 및 이미지 생성 기능을 즐기세요.",
   "Manage Subscription": "구독 관리",
   "Download Imogen 1.0 data as JSON. Import coming soon!": "Imogen 1.0 데이터를 JSON으로 다운로드하세요. 가져오기 기능이 곧 출시됩니다!",
