--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -189,7 +189,7 @@
   "Upgrade to use all AI models": "升級以使用所有 AI 模型",
   "Current Subscription Plan": "當前訂閱計劃",
   "Upgrade to paid plan to unlock all models, plugins and image generation.": "升級到付費計劃以解鎖所有模型、插件和圖像生成功能。",
-  "Upgrade to Ultimate to get access to OpenAI o1-preview and Claude 3 Opus": "升級到 Ultimate 以獲取 OpenAI o1-preview 和 Claude 3 Opus 的訪問權限",
+  "Upgrade to Ultimate to get access to OpenAI o1 and Claude 3 Opus": "升級到 Ultimate 以獲取 OpenAI o1 和 Claude 3 Opus 的訪問權限",
   "You're on the Ultimate plan! Enjoy your access to all models, plugins and image generation.": "您正在使用 Ultimate 計劃！享受所有模型、插件和圖像生成功能。",
   "Manage Subscription": "管理訂閱",
   "Download Imogen 1.0 data as JSON. Import coming soon!": "下載 Imogen 1.0 數據為 JSON。導入功能即將推出！",
